--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
   },
   "dependencies": {
     "@iconify/vue": "^4.0.0",
+    "@types/luxon": "^3.0.0",
     "@vue/eslint-config-typescript": "^11.0.2",
     "bulma": "^0.9.4",
-    "luxon": "^2.3.1",
+    "luxon": "^3.0.0",
     "pinia": "^2.0.23",
     "vue": "^3.2.41",
     "vue-router": "^4.1.5"
